--- a/estilos/mobile.css
+++ b/estilos/mobile.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@media screen and (max-width:600px){
+@media screen and (max-width: 600px){
 
 
 *{
@@ -12,12 +12,21 @@
 
 body{
     
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    overflow-x: hidden;
     background-color: rgba(0, 0, 0, 0.863);
     width: 100vw;
-    overflow-x: hidden;
     height: 100vh;
     color: white;
     
+    
+}
+
+::-webkit-scrollbar{
+    width: 0px;
 }
 
 header{
@@ -33,10 +42,8 @@ header{
 }
 
 main{
-    width: 100%;
-    height: 100%;
-    padding: 50px;
-    
+    width: 100vw;
+    height: 100vh;
 }
 
 header img{
@@ -50,7 +57,8 @@ section.banner{
     width: 100%;
     flex-shrink: 1;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 100px;
+   
    
 }
 
@@ -75,9 +83,47 @@ section.banner p{
     font-weight: 900;
 }
 
+section.beneficios{
+    width: 100vw;
+    padding-left: 10px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
 section.beneficios h1{
     text-align: center;
     font-size: 1.7em;
+    margin-bottom: 80px;
+}
+
+section.slider{
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+    padding: 5px;
+}
+
+section.slider span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    cursor: pointer;
+    border-radius: 20px;
+}
+
+section.slider img{
+    
+}
+
+section.slider span:hover{
+    transition: all 0.3s ease;
+    background-color: rgba(0, 0, 0, 0.589);
+}
+
+section.slider span:active{
+    transition: all 0.3s ease;
+    background-color: rgba(0, 0, 0, 0.589);
 }
 
 }
