--- a/estilos/mobile.css
+++ b/estilos/mobile.css
@@ -1,129 +1,197 @@
 @charset "UTF-8";
 
-@media screen and (max-width: 600px){
-
-
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    font-family: "Madimi One", sans-serif;
-}
-
-body{
-    
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    overflow-x: hidden;
-    background-color: rgba(0, 0, 0, 0.863);
-    width: 100vw;
-    height: 100vh;
-    color: white;
-    
-    
-}
+@media screen and (min-width: 0px) and (max-width: 420px){
 
 ::-webkit-scrollbar{
     width: 0px;
-}
-
-header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-    width: 100vw;
-    margin: auto;
-    margin-bottom: 30px;
-    padding: 15px;
-    box-shadow: 1px 1px 13px 0px black;
-}
-
-main{
-    width: 100vw;
-    height: 100vh;
 }
 
 header img{
     width: 100px;
 }
 
-section.banner{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    flex-shrink: 1;
-    text-align: center;
-    margin-bottom: 100px;
-   
-   
+header{
+    margin-bottom: 30px;
 }
 
-section.banner h1{
-    margin-bottom: 16px;
-    font-weight: 900;
-    font-size: 2.3em;
+section h1{
+    font-size: 1.7em;
+    margin-bottom: 50px;
+}
+
+section h2{
+    margin-bottom: 30px;
+    font-size: 1.2em;
+}
+
+section p {
+    margin: 0px auto 30px auto;
+    width: 85vw;
+    font-size: 1em;
+}
+
+section.banner{
+    margin-bottom: 50px;
+}
+
+#banner-tittle{
+    margin-bottom: 30px;
+    font-size: 2em;
 }
 
 section img{
     width: 70vw;
-    margin: auto;
-    text-align: center;
-    
-}
-
-section.banner p{
-    font-size: 1.3em;
-    width: 60vw;
-    margin: auto;
-    text-align: justify;
-    font-weight: 900;
 }
 
 section.beneficios{
-    width: 100vw;
-    padding-left: 10px;
-    text-align: center;
+    margin-bottom: 30px;   
+}   
+
+section.slider{
+    padding: 5px;
     margin-bottom: 30px;
 }
 
-section.beneficios h1{
-    text-align: center;
-    font-size: 1.7em;
-    margin-bottom: 80px;
-}
-
-section.slider{
-    display: flex;
-    width: 100vw;
-    justify-content: center;
-    padding: 5px;
-}
-
 section.slider span{
-    display: flex;
-    align-items: center;
-    justify-content: center;
     width: 50px;
-    cursor: pointer;
     border-radius: 20px;
 }
 
-section.slider img{
-    
+section.modelos h2#modelo2{
+    margin-bottom: 10px;
 }
 
-section.slider span:hover{
-    transition: all 0.3s ease;
-    background-color: rgba(0, 0, 0, 0.589);
+section.modelos p{
+    width: 85vw;
+    margin: 0px auto 30px auto;
 }
 
-section.slider span:active{
-    transition: all 0.3s ease;
-    background-color: rgba(0, 0, 0, 0.589);
+section.entrega h1{
+    margin-bottom: 30px;
 }
 
+section.entrega p{
+    margin-bottom: 10px;
+}
+
+section.entrega span{
+    margin-bottom: 20px;
+}
+
+section.contatos img{
+    width: 25px;
+    margin-bottom: 30px;
+}
+
+section.contatos a{
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+}
+
+section.contatos h1{
+    margin-bottom: 30px;
+} 
+
+footer{
+    padding: 5px 0px 5px 0px;
+}
+}
+
+@media screen and (min-width:421px) and (max-width:600px){
+
+::-webkit-scrollbar{
+width: 0px;
+}
+
+header img{
+    width: 100px;
+}
+
+header{
+    margin-bottom: 30px;
+}
+
+section h1{
+    font-size: 2.2em;
+    margin-bottom: 50px;
+}
+
+section h2{
+    margin-bottom: 30px;
+    font-size: 1.6em;
+}
+
+section p {
+    margin: 0px auto 30px auto;
+    width: 85vw;
+    font-size: 1.1em;
+}
+
+section.banner{
+    margin-bottom: 50px;
+}
+
+#banner-tittle{
+    margin-bottom: 30px;
+    font-size: 2.4em;
+}
+
+section img{
+    width: 60vw;
+}
+
+section.beneficios{
+    margin-bottom: 30px;   
+}   
+
+section.slider{
+    padding: 5px;
+    margin-bottom: 30px;
+}
+
+section.slider span{
+    width: 50px;
+    border-radius: 20px;
+}
+
+section.modelos h2#modelo2{
+    margin-bottom: 10px;
+}
+
+section.modelos p{
+    width: 85vw;
+    margin: 0px auto 30px auto;
+}
+
+section.entrega h1{
+    margin-bottom: 30px;
+}
+
+section.entrega p{
+    margin-bottom: 10px;
+}
+
+section.entrega span{
+    margin-bottom: 20px;
+}
+
+section.contatos img{
+    width: 25px;
+    margin-bottom: 30px;
+}
+
+section.contatos a{
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+}
+
+section.contatos h1{
+    margin-bottom: 30px;
+} 
+
+footer{
+    padding: 5px 0px 5px 0px;
+}
 }
