--- a/estilos/largemobile.css
+++ b/estilos/largemobile.css
@@ -14,12 +14,12 @@
         margin-bottom: 40px;
     }
 
-    section h1{
+    section h2{
         font-size: 2.6em;
         margin-bottom: 60px;
     }
     
-    section h2{
+    section h3{
         font-size: 1.6em;
         margin-bottom: 30px;
     }
@@ -43,7 +43,7 @@
         width: 165px;
     }
     
-    section img{
+    img{
         width: 50vw;
     }
     
@@ -51,17 +51,17 @@
         margin-bottom: 30px;   
     }   
     
-    section.slider{
+    div.slider{
         padding: 5px;
         margin-bottom: 30px;
     }
     
-    section.slider span{
+    div.slider span{
         width: 50px;
         border-radius: 20px;
     }
     
-    section.modelos h2#modelo2{
+    section.modelos h3#modelo2{
         margin-bottom: 10px;
     }
     
@@ -70,7 +70,7 @@
         margin: 0px auto 80px auto;
     }
     
-    section.entrega h1{
+    section.entrega h2{
         margin-bottom: 30px;
     }
     
@@ -93,7 +93,7 @@
         text-align: center;
     }
     
-    section.contatos h1{
+    section.contatos h2{
         margin-bottom: 30px;
     } 
     
