--- a/estilos/mobile.css
+++ b/estilos/mobile.css
@@ -14,12 +14,12 @@ header{
     margin-bottom: 30px;
 }
 
-section h1{
+section h2{
     font-size: 1.7em;
     margin-bottom: 50px;
 }
 
-section h2{
+section h3{
     margin-bottom: 30px;
     font-size: 1.2em;
 }
@@ -39,7 +39,7 @@ section.banner{
     font-size: 2em;
 }
 
-section img{
+img{
     width: 70vw;
 }
 
@@ -54,17 +54,17 @@ section.beneficios{
     margin-bottom: 30px;   
 }   
 
-section.slider{
+div.slider{
     padding: 5px;
     margin-bottom: 30px;
 }
 
-section.slider span{
+div.slider span{
     width: 50px;
     border-radius: 20px;
 }
 
-section.modelos h2#modelo2{
+section.modelos h3#modelo2{
     margin-bottom: 10px;
 }
 
@@ -73,7 +73,7 @@ section.modelos p{
     margin: 0px auto 30px auto;
 }
 
-section.entrega h1{
+section.entrega h2{
     margin-bottom: 30px;
 }
 
@@ -96,7 +96,7 @@ section.contatos a{
     text-align: center;
 }
 
-section.contatos h1{
+section.contatos h2{
     margin-bottom: 30px;
 } 
 
@@ -119,12 +119,12 @@ header{
     margin-bottom: 30px;
 }
 
-section h1{
+section h2{
     font-size: 2.2em;
     margin-bottom: 50px;
 }
 
-section h2{
+section h3{
     margin-bottom: 30px;
     font-size: 1.6em;
 }
@@ -159,17 +159,17 @@ section.beneficios{
     margin-bottom: 30px;   
 }   
 
-section.slider{
+div.slider{
     padding: 5px;
     margin-bottom: 30px;
 }
 
-section.slider span{
+div.slider span{
     width: 50px;
     border-radius: 20px;
 }
 
-section.modelos h2#modelo2{
+section.modelos h3#modelo2{
     margin-bottom: 10px;
 }
 
@@ -178,7 +178,7 @@ section.modelos p{
     margin: 0px auto 30px auto;
 }
 
-section.entrega h1{
+section.entrega h2{
     margin-bottom: 30px;
 }
 
@@ -201,7 +201,7 @@ section.contatos a{
     text-align: center;
 }
 
-section.contatos h1{
+section.contatos h2{
     margin-bottom: 30px;
 } 
 
