--- a/estilos/mobile.css
+++ b/estilos/mobile.css
@@ -24,7 +24,7 @@ section h3{
     font-size: 1.2em;
 }
 
-section p {
+main p{
     margin: 0px auto 30px auto;
     width: 85vw;
     font-size: 1em;
@@ -37,6 +37,11 @@ section.banner{
 #banner-tittle{
     margin-bottom: 30px;
     font-size: 2em;
+}
+
+div.banner{
+    display: flex;
+    flex-direction: column;
 }
 
 img{
@@ -64,9 +69,7 @@ div.slider span{
     border-radius: 20px;
 }
 
-section.modelos h3#modelo2{
-    margin-bottom: 10px;
-}
+
 
 section.modelos p{
     width: 85vw;
@@ -119,17 +122,17 @@ header{
     margin-bottom: 30px;
 }
 
-section h2{
+h2{
     font-size: 2.2em;
     margin-bottom: 50px;
 }
 
-section h3{
+h3{
     margin-bottom: 30px;
     font-size: 1.6em;
 }
 
-section p {
+main p {
     margin: 0px auto 30px auto;
     width: 85vw;
     font-size: 1.1em;
@@ -142,6 +145,11 @@ section.banner{
 #banner-tittle{
     margin-bottom: 30px;
     font-size: 2.4em;
+}
+
+div.banner{
+    display: flex;
+    flex-direction: column;
 }
 
 section img{
@@ -169,9 +177,7 @@ div.slider span{
     border-radius: 20px;
 }
 
-section.modelos h3#modelo2{
-    margin-bottom: 10px;
-}
+
 
 section.modelos p{
     width: 85vw;
